<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/basketball"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/TEAM_A"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/team_score_A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/initial_score_team"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="30sp" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10sp"
                        android:layout_marginTop="10sp"
                        android:onClick="Points3ForA"
                        android:text="@string/3_points" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10sp"
                        android:onClick="Points2ForA"
                        android:text="@string/2_points" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:onClick="FreeRunForA"
                        android:text="@string/free_throw" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="325dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/TEAM_B"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/team_score_B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/initial_score_team"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="30sp" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10sp"
                        android:layout_marginTop="10sp"
                        android:onClick="Points3ForB"
                        android:text="@string/3_points" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10sp"
                        android:onClick="Points2ForB"
                        android:text="@string/2_points" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:onClick="FreeRunForB"
                        android:text="@string/free_throw" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="125dp"
                android:onClick="Reset"
                android:text="@string/Reset" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
